--- a/main.css
+++ b/main.css
@@ -8,11 +8,12 @@ header {
     background: url("qa.jpg");
     background-size: cover;
     height: 50vh;
+    background-position: 0 10%;
 }
 #name {
     position: absolute;
-    color: rgba(255,255,255,0.7);
-    text-shadow: 0px 0px 10px #FFF;
+    color: rgba(255,255,255,0.8);
+    text-shadow: 0px 0px 2px #FFF;
     font-size: 50px;
     margin-top: 20%; 
     margin-left: 10%;
@@ -39,7 +40,7 @@ nav a {
 #column1 {
     flex: 1;
     height: 90vh;
-    background-color: azure; 
+    background-color: #fdf8f8; 
 }
 #column2 {
     flex: 3;
@@ -57,7 +58,7 @@ nav a {
 }
 #info-image2 {
     flex: 1;
-    background-color: #f5eff0;
+    background-color: #fdf8f8;
     padding: 5%;
 }
 h2 {
@@ -69,11 +70,12 @@ p {
 #column3 {
     flex: 1;
     height: 90vh;
-    background-color: azure; 
+    background-color: #fdf8f8; 
     color: 
 }
 footer {
+    padding-left: 22.5%;
     height: 5vh;
     width: 100vw;
-    background-color: aqua;
+    background-color: #fdf8f8;
 }
