--- a/css/style.css
+++ b/css/style.css
@@ -1,81 +1,160 @@
-* {
-    margin: 0 auto;
-    font-family: "Courier";
+body {
+  height: 100%;
+  width: 100%;
+  background-color: #f8f7f5;
+  font-family: 'Titillium Web', sans-serif;
+}
+.sidenav {
+  position: fixed;
+ /* box-shadow: 1px 0px 2px #000;*/
+  background-color: transparent;
+  float: left;
+  width: 10%;
+  height: 100%;
+  z-index: 2;
+  display: inline-flex;
+  transition: 0.6s;
+}
+.sidenav.active {
+  width: 40%;
+  transition: 0.6s;
+}
+#realSidenav:hover + #main-aboutme {
+  width: 95%;
+  transition: width 1s;
+}
+#sidenav-contents {
+  float: left;
+ /* background-color: gold;*/
+  height: 100%;
+  width: 100%;
+  padding-top: 20px;
+  display: none;
+  flex: 2;
+  -webkit-transition: width 2s;
+  -webkit-transition-timing-function: linear;
+  transition: width 2s;
+  transition-timing-function: linear;
+}
+#sidenav-contents.active{
+  transition: 0.4s;
+  display: block;
+}
+#menu-panel{
+  float: right;
+  background-color: transparent;
+  width: 100%;
+  height: 100%;
+  z-index: 2;
+  text-align: center;
+  flex: .5;
+  border-right: 1px solid #f8f7f5;
+}
+#ham-menu {
+  background: url(../images/noun_683451_cc.png);
+  background-repeat: no-repeat;
+  background-size: cover;
+  width: 35px;
+  height: 30px;
+  /*hamburger menu by Kero from the Noun Project*/
+  /*https://thenounproject.com/search/?q=hamburger%20menu&i=683451*/
+  margin-top: 10%;
+  position: relative;
+  left: 15%;
+}
+#menu-text {
+  -webkit-transform: rotate(-90deg);
+  -moz-transform: rotate(-90deg);
+  position: relative;
+  top: 45%;
+  left: -10%;
+}
+#main-aboutme{
+  position: absolute;
+  right: 0;
+  background-color: #f1dad0;
+  width: 100%;
+  height: 100%;
+  display: grid;
+  grid-template-columns: 1fr;
+  color: #bea597 ;
+  transition: width 1s;
+  /*-webkit-transition: width 1s;
+  -moz-transition: width 1s;*/
+}
+#main-aboutme.active{
+  opacity: .1;
+  /*width: 50%;*/
+
+}
+#header {
+
+}
+#main-logo{
+  position: absolute;
+  top: 2%;
+  left: 45%;
+  font-size: 30px;
+  font-weight: 600;
+  border: 2px solid #d8c3b7;
+  width: 45px;
+  height: 40px;
+  padding-left: 5px;
+  padding-bottom: 5px;
+  position: absolute;
+  line-height: 50px;
+  box-shadow: inset 0px 0px 20px #d0b9ac;
 }
 
-header {
-    width: 100vw;
-    background: url("qa.jpg");
-    background-size: cover;
-    height: 50vh;
-    background-position: 0 10%;
+#fb-logo{
+ position: absolute;
+ top: 2%;
+ right: 6.5%;
 }
-#name {
-    position: absolute;
-    color: rgba(255,255,255,0.8);
-    text-shadow: 0px 0px 2px #FFF;
-    font-size: 50px;
-    margin-top: 20%; 
-    margin-left: 10%;
+#inst-logo {
+  position: absolute;
+  top: 2%;
+  right: 5%;
 }
-#container {
-    width: 100vw;
-    height: 90vh;
-    display: flex;
-    flex-direction: row;
+#about-me-text {
+  /*grid-row-end: span 2;*/
+  /*height: 100%;*/
+  grid-column-start: 1;
+  grid-column-end: 3;
+  padding: 2% 18% 5px 18%;
+  text-align: justify;
+  color: #847872;
 }
-nav {
-    display: block;
-    margin-top: 10%;
+#about-me-img {
+  border-radius: 100%;
+  box-shadow: 0px 0px 20px #bea597;
+  width: 250px;
+  height: 250px;
+  background: url(../images/me_color.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: top;
+  float: left;
+  margin: 5% 5% 0 0;
+  filter: grayscale(80%);
 }
-nav a {
-    text-decoration: none;
-    display: block;
-    line-height: 70px;
-    text-align: center;
-    font-size: 20px;
-    color: black;
+.h3-about {
+  font-size: 1.8em;
+  font-weight: 400;
+  margin-top: 5%;
+  margin-left: 40%;
+  margin-bottom: 4%;
 }
+.h5-about {
+  font-size: 1.1em;
+  font-weight: 600;
+  margin-left: 40%;
+  margin-bottom: 3%;
 
-#column1 {
-    flex: 1;
-    height: 90vh;
-    background-color: #fdf8f8; 
 }
-#column2 {
-    flex: 3;
-    height: 90vh;
-    display: flex;
-    flex-direction: column;
-}
-#info-image1 {
-/*    position: absolute;*/
-    flex: 1;
-    width: 100%;;
-    background: url("project.jpg");
-    background-size: cover;
-    
-}
-#info-image2 {
-    flex: 1;
-    background-color: #fdf8f8;
-    padding: 5%;
-}
-h2 {
-    margin-bottom: 2%;
-}
-p {
-    line-height: 30px;
-}
-#column3 {
-    flex: 1;
-    height: 90vh;
-    background-color: #fdf8f8; 
-    color: 
-}
-footer {
-    padding-left: 22.5%;
-    height: 5vh;
-    width: 100vw;
-    background-color: #fdf8f8;
+.p-about {
+  margin-left: 40%;
+  margin-bottom: 3%;
+  font-size: 1.1em;
+  line-height: 1.8em;
 }
